# ERusticSearch

./: .cursorrules  .gitignore  Cargo.toml  README.md  test.json
.github/workflows/: rust.yml
config/: default.yaml
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  storage.rs  tests.rs
src/api/: handlers.rs  middleware.rs  routes.rs
src/common/: config.rs
src/core/: document.rs  index.rs  mod.rs  search.rs
src/storage/: index_storage.rs  mod.rs  persistence.rs
tests/: api_tests.rs  engine_tests.rs
