[package]
name = "rust-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_search"
path = "src/lib.rs"

[[bin]]
name = "rust-search"
path = "src/main.rs"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tantivy = "0.19"
tempfile = "3.2"
bincode = "1.3"
